--- a/src/index.css
+++ b/src/index.css
@@ -64,12 +64,11 @@ header h1 {
 .formulario {
     width: 95%;
     margin: 0 auto;
-    padding: 10rem 0;
+    padding: 4rem 0; /* Ajusta el relleno para dispositivos móviles */
 }
 @media (min-width: 768px) {
     .formulario {
-        padding: 5rem 0;
-        width: 60rem;
+        padding: 10rem 0; /* Mantiene el relleno original para pantallas más grandes */
     }
 }
 .formulario legend {
@@ -84,7 +83,8 @@ header h1 {
 }
 .formulario .campo {
     display: grid;
-    margin-bottom: 2rem;
+    grid-template-rows: auto; /* Filas automáticas según el contenido */
+    margin-bottom: 1.5rem; /* Ajusta el margen para un espaciado adecuado */
 }
 
 .formulario label {
@@ -186,10 +186,16 @@ header h1 {
         margin-bottom: 0;
     }
 }
+
 .formulario input[type="text"].nuevo-presupuesto, 
 .formulario input[type="number"].nuevo-presupuesto {
-    font-size: 2.8rem;
+    font-size: 2rem; /* Ajusta el tamaño del texto según tus preferencias */
     text-align: center;
+    padding: 1rem; /* Ajusta el relleno para un mejor aspecto */
+    border-radius: 0.5rem; /* Agrega bordes redondeados */
+    margin-bottom: 1rem; /* Espaciado entre los campos */
+    width: 100%; /* Ancho del 100% para ocupar el contenedor */
+    box-sizing: border-box; /* Evita que el relleno afecte el ancho total */
 }
 
 .contenedor-presupuesto svg {
